Form adjustment, new default parameters, new .gitIgnore

--- a/BugTracker/Views/Users/Index.cshtml
+++ b/BugTracker/Views/Users/Index.cshtml
@@ -15,7 +15,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Username)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.Role)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Group)
+            </th>
         </tr>
     </thead>
     <tbody>
