--- a/BugTracker/Views/Bugs/Edit.cshtml
+++ b/BugTracker/Views/Bugs/Edit.cshtml
@@ -20,36 +20,41 @@
             </div>
             <div class="form-group">
                 <label asp-for="Priority" class="control-label"></label>
-                <select asp-for="Priority" class="form-control">
-                    <option>Choose a Priority Level</option>
-                    <option value="low">Low</option>
-                    <option value="medium">Medium</option>
-                    <option value="high">High</option>
-                    <option value="critical">Critical</option>
+                <select asp-for="Priority" class="form-control" required>
+                    <option value="" selected >Choose a Priority Level</option>
+                    <option value="Low">Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
+                    <option value="Critical">Critical</option>
                 </select>
                 <span asp-validation-for="Priority" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
-                <select asp-for="Category" class="form-control">
-                    <option value="">Choose a Category</option>
-                    <option value="graphical">Graphical</option>
-                    <option value="crash">Crash</option>
-                    <option value="performance">Performance</option>
-                    <option value="user error">User Errror</option>
+                <select asp-for="Category" class="form-control" required>
+                    <option value="" selected >Choose a Category</option>
+                    <option value="Graphical">Graphical</option>
+                    <option value="Crash">Crash</option>
+                    <option value="Performance">Performance</option>
+                    <option value="User Error">User Errror</option>
                 </select>
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
                 <select asp-for="Status" class="form-control">
-                    <option value="open">Open</option>
-                    <option value="closed">Closed</option>
+                    <option value="Open">Open</option>
+                    <option value="Closed">Closed</option>
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <button asp-action="Index" class="btn btn-secondary btn-block" formnovalidate>Cancel</button>
+                <button type="submit" value="Save" class="btn btn-primary btn-block">Save </button>
+            </div>
+            <div class="form-group">
+                <p class="text-center">Warning! This action cannot be undone!</p>
+                <button asp-action="Delete" class="btn btn-danger btn-block" formnovalidate>Delete Entry</button>
             </div>
         </form>
     </div>
