--- a/BugTracker/Views/Bugs/Edit.cshtml
+++ b/BugTracker/Views/Bugs/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Bug</h1>
 
-<h4>Bug</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,7 +14,7 @@
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control"></textarea>
+                <textarea asp-for="Description" class="form-control" required></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -50,7 +49,7 @@
             </div>
             <div class="form-group">
                 <button asp-action="Index" class="btn btn-secondary btn-block" formnovalidate>Cancel</button>
-                <button type="submit" value="Save" class="btn btn-primary btn-block">Save </button>
+                <button type="submit" class="btn btn-success btn-block">Save Changes</button>
             </div>
             <div class="form-group">
                 <p class="text-center">Warning! This action cannot be undone!</p>
@@ -60,9 +59,6 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
