--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -1,20 +1,17 @@
 ﻿@model IEnumerable<BugTracker.Models.Bug>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Bugs";
 }
 
-<h1>Index</h1>
+<h1>Bugs</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
@@ -30,14 +27,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Status)
+            </th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
@@ -46,6 +44,15 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Category)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Username)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
