--- a/BugTracker/Views/Users/Delete.cshtml
+++ b/BugTracker/Views/Users/Delete.cshtml
@@ -17,6 +17,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Username)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Role)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Role)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
