--- a/BugTracker/Views/Users/Edit.cshtml
+++ b/BugTracker/Views/Users/Edit.cshtml
@@ -19,14 +19,25 @@
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="Role" class="control-label"></label>
+                <select asp-for="Role" class="form-control" required>
+                    <option value="" selected>Choose a Role Level</option>
+                    <option value="User">User</option>
+                    <option value="Contributor">Contributor</option>
+                    <option value="Admin">Admin</option>
+                </select>
+                <span asp-validation-for="Role" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <button asp-action="Index" class="btn btn-secondary btn-block" formnovalidate>Cancel</button>
+                <button type="submit" class="btn btn-success btn-block">Save Changes</button>
+            </div>
+            <div class="form-group">
+                <p class="text-center">Warning! This action cannot be undone!</p>
+                <button asp-action="Delete" class="btn btn-danger btn-block" formnovalidate>Delete Entry</button>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
