--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -6,10 +6,7 @@
 
 <h1>Bugs</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table table-striped">
+<table class="table table-striped text-center">
     <thead>
         <tr>
             <th>
@@ -22,21 +19,24 @@
                 @Html.DisplayNameFor(model => model.Category)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Username)
+                Submitted by:
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Date)
+                Submitted on:
             </th>
+            <th></th>
             <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
+            <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model)
 {
         <tr>
-            <td>
+            <td class="text-left">
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
@@ -52,14 +52,22 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Time)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning">Edit</a>
+            </td>
+            <td>
+                <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<p>
+    <a asp-action="Create" class="btn btn-success btn-block">Create New</a>
+</p>
