--- a/BugTracker/Views/Users/Index.cshtml
+++ b/BugTracker/Views/Users/Index.cshtml
@@ -4,12 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table mat-table class="table table-striped table-hover">
+<table class="table table-striped table-dark table-hover text-center table-responsive-xl">
     <caption hidden>List of Current Users</caption>
     <thead>
         <tr>
@@ -19,30 +14,27 @@
             <th scope="col">
                 @Html.DisplayNameFor(model => model.Role)
             </th>
-            <th scope="col" />
-            <th scope="col" />
-            <th scope="col" />
+            <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Username)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Role)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Edit</a>
-            </td>
-            <td>
-                <a asp-action="Details" asp-route-id="@item.ID"  class="btn btn-secondary btn-block">Details</a>
-            </td>
-            <td>
-                <a type="button" asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Username)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Role)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Edit</a>
+                </td>
+                <td>
+                    <a type="button" asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
