Added database, tweaked forms

--- a/BugTracker/Views/Users/Index.cshtml
+++ b/BugTracker/Views/Users/Index.cshtml
@@ -8,14 +8,14 @@
     <caption hidden>List of Current Users</caption>
     <thead>
         <tr>
-            <th scope="col">
+            <th style="width:30%">
                 @Html.DisplayNameFor(model => model.Username)
             </th>
-            <th scope="col">
+            <th style="width:40%">
                 @Html.DisplayNameFor(model => model.Role)
             </th>
-            <th></th>
-            <th></th>
+            <th style="width:15%"></th>
+            <th style="width:15%"></th>
         </tr>
     </thead>
     <tbody>
