--- a/BugTracker/Views/Bugs/Create.cshtml
+++ b/BugTracker/Views/Bugs/Create.cshtml
@@ -18,14 +18,33 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="Priority" class="control-label"></label>
+                <select asp-for="Priority" class="form-control" required>
+                    <option value="" selected>Choose a Priority Level</option>
+                    <option value="Low">Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
+                    <option value="Critical">Critical</option>
+                </select>
+                <span asp-validation-for="Priority" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Category" class="control-label"></label>
+                <select asp-for="Category" class="form-control" required>
+                    <option value="" selected>Choose a Category</option>
+                    <option value="Graphical">Graphical</option>
+                    <option value="Crash">Crash</option>
+                    <option value="Performance">Performance</option>
+                    <option value="User Error">User Errror</option>
+                </select>
+                <span asp-validation-for="Category" class="text-danger"></span>
+            </div>
+            <div class="d-flex justify-content-end">
+                <a asp-action="Index" class="btn btn-secondary btn-lg mx-1">Cancel</a>
+                <input type="submit" value="Create" class="btn btn-primary btn-lg mx-1" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
