--- a/BugTracker/Views/Bugs/Edit.cshtml
+++ b/BugTracker/Views/Bugs/Edit.cshtml
@@ -35,7 +35,7 @@
                     <option value="Graphical">Graphical</option>
                     <option value="Crash">Crash</option>
                     <option value="Performance">Performance</option>
-                    <option value="User Error">User Errror</option>
+                    <option value="User Error">User Error</option>
                 </select>
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
@@ -47,13 +47,9 @@
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <button asp-action="Index" class="btn btn-secondary btn-block" formnovalidate>Cancel</button>
-                <button type="submit" class="btn btn-success btn-block">Save Changes</button>
-            </div>
-            <div class="form-group">
-                <p class="text-center">Warning! This action cannot be undone!</p>
-                <button asp-action="Delete" class="btn btn-danger btn-block" formnovalidate>Delete Entry</button>
+            <div class="d-xl-flex btn-group-lg justify-content-xl-end">
+                <button asp-action="Index" class="btn btn-secondary btn-lg mx-1" formnovalidate>Cancel</button>
+                <button type="submit" class="btn btn-success btn-lg mx-1">Save</button>
             </div>
         </form>
     </div>
