--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -4,62 +4,60 @@
     ViewData["Title"] = "Bugs";
 }
 
-<table class="table table-striped table-dark table-hover text-center table-responsive-xl">
-    <thead class="thead-dark text-nowrap">
+<table class="table table-striped table-dark table-hover text-center table-responsive text-nowrap">
+    <thead class="thead-dark">
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Priority)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                Submitted by:
-            </th>
-            <th>
-                Submitted on:
-            </th>
-            <th></th>
-            <th>
+            <th style="width:10%">
                 @Html.DisplayNameFor(model => model.Status)
             </th>
-            <th></th>
-            <th></th>
+            <th style="width:20%">
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th style="width:10%">
+                @Html.DisplayNameFor(model => model.Priority)
+            </th>
+            <th style="width:10%">
+                @Html.DisplayNameFor(model => model.Category)
+            </th>
+            <th style="width:10%">
+                Submitted by:
+            </th>
+            <th style="width:10%"></th>
+            <th style="width:10%"></th>
+            <th style="width:10%"></th>
+            <th style="width:10%"></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model)
 {
         <tr>
-            <td class="text-left">
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Priority)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Username)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Time)
-            </td>
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning">Edit</a>
+            <td class="align-middle">
+                @Html.DisplayFor(modelItem => item.Description)
             </td>
-            <td>
-                <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger">Delete</a>
+            <td class="align-middle">
+                @Html.DisplayFor(modelItem => item.Priority)
+            </td>
+            <td class="align-middle">
+                @Html.DisplayFor(modelItem => item.Category)
+            </td>
+            <td class="align-middle">
+                @Html.DisplayFor(modelItem => item.Username)
+            </td>
+            <td class="align-middle">
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td class="align-middle">
+                @Html.DisplayFor(modelItem => item.Time)
+            </td>
+            <td class="align-middle">
+                <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Edit</a>
+            </td>
+            <td class="align-middle">
+                <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
             </td>
         </tr>
 }
