--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<BugTracker.Models.Bug>
+@using Microsoft.AspNetCore.Authorization;
+@inject IAuthorizationService AuthorizationService
 
 @{
     ViewData["Title"] = "Bugs";
@@ -24,8 +26,11 @@
             </th>
             <th style="width:10%"></th>
             <th style="width:10%"></th>
+            @if (this.User.IsInRole("User"))
+            {
             <th style="width:10%"></th>
             <th style="width:10%"></th>
+            }
         </tr>
     </thead>
     <tbody>
@@ -53,16 +58,21 @@
             <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.Time)
             </td>
+
+            @if (this.User.IsInRole("User"))
+            {
             <td class="align-middle">
                 <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Edit</a>
             </td>
             <td class="align-middle">
                 <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
             </td>
+            }
         </tr>
 }
     </tbody>
 </table>
+
 <div class="d-flex justify-content-end">
     <a asp-action="Create" class="btn btn-lg btn-success">Submit New Bug</a>
 </div>
