--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -9,7 +9,7 @@
 <table class="table table-striped table-dark table-hover text-center table-responsive text-nowrap">
     <thead class="thead-dark">
         <tr>
-            <th style="width:10%">
+            <th style="width:10%" class="text-wrap">
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th style="width:20%">
@@ -26,11 +26,8 @@
             </th>
             <th style="width:10%"></th>
             <th style="width:10%"></th>
-            @if (this.User.IsInRole("User"))
-            {
             <th style="width:10%"></th>
             <th style="width:10%"></th>
-            }
         </tr>
     </thead>
     <tbody>
@@ -58,16 +55,12 @@
             <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.Time)
             </td>
-
-            @if (this.User.IsInRole("User"))
-            {
             <td class="align-middle">
                 <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Edit</a>
             </td>
             <td class="align-middle">
                 <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
             </td>
-            }
         </tr>
 }
     </tbody>
