--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Bugs";
 }
 
-<table class="table table-striped table-dark table-hover text-center table-responsive text-nowrap">
+<table class="table table-striped table-dark table-hover text-center table-responsive-xl text-nowrap">
     <thead class="thead-dark">
         <tr>
             <th style="width:10%" class="text-wrap">
@@ -31,8 +31,8 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model)
-{
+        @foreach (var item in Model)
+        {
         <tr>
             <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.Status)
@@ -62,7 +62,7 @@
                 <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
             </td>
         </tr>
-}
+        }
     </tbody>
 </table>
 
