--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -1,67 +1,80 @@
 ﻿@model IEnumerable<BugTracker.Models.Bug>
-@using Microsoft.AspNetCore.Authorization;
-@inject IAuthorizationService AuthorizationService
 
 @{
     ViewData["Title"] = "Bugs";
 }
 
-<table class="table table-striped table-dark table-hover text-center table-responsive-xl text-nowrap">
+<table class="table table-striped table-dark table-hover text-center table-responsive-xl">
     <thead class="thead-dark">
         <tr>
-            <th style="width:10%" class="text-wrap">
+            <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
-            <th style="width:20%">
+            <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th style="width:10%">
+            <th>
                 @Html.DisplayNameFor(model => model.Priority)
             </th>
-            <th style="width:10%">
+            <th>
                 @Html.DisplayNameFor(model => model.Category)
             </th>
-            <th style="width:10%">
+            <th>
                 Submitted by:
             </th>
-            <th style="width:10%"></th>
-            <th style="width:10%"></th>
-            <th style="width:10%"></th>
-            <th style="width:10%"></th>
+            <th></th>
+            <th></th>
+            <th>Resolved by: </th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.Priority)
-            </td>
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.Username)
-            </td>
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.Time)
-            </td>
-            <td class="align-middle">
-                <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Edit</a>
-            </td>
-            <td class="align-middle">
-                <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
-            </td>
-        </tr>
+            <tr>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td class="align-middle text-left">
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.Priority)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.Category)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.Submitter)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.SubmissionDate)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.SubmissionTime)
+                </td>
+                <td class="align-middle text-left">
+                    @Html.DisplayFor(modelItem => item.Solution)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.SolutionUser)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.SubmissionTime)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.SubmissionTime)
+                </td>
+                <td class="align-middle">
+                    <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Edit</a>
+                </td>
+                <td class="align-middle">
+                    <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
