--- a/BugTracker/Views/Bugs/Edit.cshtml
+++ b/BugTracker/Views/Bugs/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BugTracker.Models.Bug
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Close";
 }
 
 <h1>Edit Bug</h1>
@@ -39,30 +39,26 @@
                 </select>
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control">
-                    <option value="Open">Open</option>
-                    <option value="Closed">Closed</option>
-                </select>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div id="Solution" class="form-group hide">
+
+            <div class="form-group hide">
                 <label asp-for="Solution" class="control-label"></label>
                 <textarea asp-for="Solution" class="form-control" required></textarea> 
                 <span asp-validation-for="Solution" class="text-danger"></span>
             </div>
 
-            <input type="hidden" asp-for="SubmissionDate" value="@Model.SubmissionDate" />
-            <input type="hidden" asp-for="SubmissionDate" value="@Model.SubmissionTime" />
-            <input type="hidden" asp-for="SubmissionTime" value="@Model.Submitter" />            
-            <input type="hidden" asp-for="SolutionDate" value="@Model.SolutionDate" />
-            <input type="hidden" asp-for="SolutionTime" value="@Model.SolutionTime" />
-            <input type="hidden" asp-for="SolutionUser" value="@this.User.Identity.ToString()" />
+            <div class="form-group">
+                <input type="hidden" asp-for="Status" value="Closed" />
+                <input type="hidden" asp-for="SubmissionDate" value="@Model.SubmissionDate" />
+                <input type="hidden" asp-for="SubmissionTime" value="@Model.SubmissionTime" />
+                <input type="hidden" asp-for="Submitter" value="@Model.Submitter" />
+                <input type="hidden" asp-for="SolutionDate" value="@Model.SolutionDate" />
+                <input type="hidden" asp-for="SolutionTime" value="@Model.SolutionTime" />
+                <input type="hidden" asp-for="SolutionUser" value="@this.User.Identity.ToString()" />
+            </div>
             
             <div class="d-xl-flex btn-group-lg justify-content-xl-end">
                 <button asp-action="Index" class="btn btn-secondary btn-lg mx-1" formnovalidate>Cancel</button>
-                <button type="submit" class="btn btn-success btn-lg mx-1">Save</button>
+                <button type="submit" class="btn btn-success btn-lg mx-1">Close</button>
             </div>
         </form>
     </div>
