--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -69,7 +69,7 @@
                     @Html.DisplayFor(modelItem => item.SubmissionTime)
                 </td>
                 <td class="align-middle">
-                    <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Edit</a>
+                    <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Close</a>
                 </td>
                 <td class="align-middle">
                     <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
