--- a/BugTracker/Views/Home/Index.cshtml
+++ b/BugTracker/Views/Home/Index.cshtml
@@ -2,16 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to the Bug Tracker.</h1>
-    <br />
-    <div class="text-left">
-        <p class="text-wrap">This is a simple app to track the sorts of bugs you might encounter when running a computer program.</p>
-        <p class="text-wrap">This project was built in ASP.NET Core MVC, utilizing the Entity Framework and Angular.</p>
-        <p class="text-wrap">The aim of the project is to familiarize myself with the ASP.NET framework. Additionally, I'm hoping to gain an increased understanding of the C# language and .NET framework.</p>
-        <p class="text-wrap">The end goal of the project is to see what I can build in a week or two. My initial plan was a week, if only for the basics. I'm thinking of adding an extra week for polish. I want to see what I can accomplish when sticking to a deadline.</p>
-        <p class="text-wrap">I'm also planning on uploading documents that will chronicle the process of developing the project. I'm hoping that it will help me demonstrate my thought processes and problem techniques. Something that gives insight into the project - the why instead of just the how.</p>
-    </div>
-    <br />
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<p class="text-left">
+    This is a simple app to track the sorts of bugs you might encounter when running a computer program.
+    This project was built in ASP.NET Core MVC, utilizing the Entity Framework.The aim of the project is to familiarize myself with the ASP.NET framework.
+    Additionally, I'm hoping to gain an increased understanding of the C# language and .NET framework.
+    The end goal of the project is to see what I can build in a week or two. My initial plan was a week, if only for the basics. I'm thinking of adding an extra week for polish. I want to see what I can accomplish when sticking to a deadline.
+    I'm also planning on uploading documents that will chronicle the process of developing the project. I'm hoping that it will help me demonstrate my thought processes and problem techniques. Something that gives insight into the project - the why instead of just the how.
+</p>
