--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -4,82 +4,94 @@
     ViewData["Title"] = "Bugs";
 }
 
-<table class="table table-striped table-dark table-hover text-center table-responsive-xl">
-    <thead class="thead-dark">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Priority)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                Submitted by:
-            </th>
-            <th></th>
-            <th></th>
-            <th>Resolved by: </th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-                <td class="align-middle text-left">
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.Priority)
-                </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.Category)
-                </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.Submitter)
-                </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.SubmissionDate)
-                </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.SubmissionTime)
-                </td>
-                <td class="align-middle text-left">
-                    @Html.DisplayFor(modelItem => item.Solution)
-                </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.SolutionUser)
-                </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.SubmissionTime)
-                </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.SubmissionTime)
-                </td>
-                <td class="align-middle">
-                    <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Close</a>
-                </td>
-                <td class="align-middle">
-                    <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+        <table class="table table-striped table-hover text-center table-sm border-top border-left border-right border-bottom shadow">
+            <thead class="thead-light border-top border-bottom">
+                <tr>
+                    <th class="border-left">
+                        @Html.DisplayNameFor(model => model.Status)
+                    </th>
+                    <th colspan="2">
+                        @Html.DisplayNameFor(model => model.Description)
+                    </th>
+                    <th>
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Priority)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Category)
+                    </th>
+                    <th colspan="2">
+                        @Html.DisplayNameFor(model => model.Solution)
+                    </th>
+                    <th>
+                        Submitted by:
+                    </th>
+                    <th></th>
+                    <th></th>
+                    <th>Resolved by: </th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th class="border-right"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                <tr>
+                    <td class="align-middle border-left">
+                        @Html.DisplayFor(modelItem => item.Status)
+                    </td>
+                    <td class="align-middle" colspan="2">
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.Priority)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.Category)
+                    </td>
+                    <td class="align-middle" colspan="2">
+                        @Html.DisplayFor(modelItem => item.Solution)
+                    </td>
+                    <td class="align-middle">
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.Submitter)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.SubmissionDate)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.SubmissionTime)
+                    </td>
+                    <td class="align-middle text-left">
+                        @Html.DisplayFor(modelItem => item.Solution)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.SolutionUser)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.SubmissionTime)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.SubmissionTime)
+                    </td>
+                    <td class="align-middle">
+                        <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Close</a>
+                    </td>
+                    <td class="align-middle border-right">
+                        <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
+                    </td>
+                </tr>
+                }
+            </tbody>
+        </table>
 
-<div class="d-flex justify-content-end">
-    <a asp-action="Create" class="btn btn-lg btn-success">Submit New Bug</a>
-</div>
-
+    
+        <a asp-action="Create" class="btn btn-lg btn-success">Submit New Bug</a>
