--- a/BugTracker/Views/Shared/_LoginPartial.cshtml
+++ b/BugTracker/Views/Shared/_LoginPartial.cshtml
@@ -5,21 +5,21 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
+<div>
+    <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+</div>
+<div>
+    <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+        <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+    </form>
+</div>
 }
 else
 {
-    <li class="nav-item">
-        <a asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+<div>
+    <a asp-area="Identity" asp-page="/Account/Register">Register</a>
+</div>
+<div>
+    <a asp-area="Identity" asp-page="/Account/Login">Login</a>
+</div>
 }
