Properly updated authentication

--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -94,4 +94,4 @@
         </table>
 
     
-        <a asp-action="Create" class="btn btn-lg btn-success">Submit New Bug</a>
+        <a asp-action="Create" class="btn btn-lg btn-success" asp-controller="Bugs" >Submit New Bug</a>
