--- a/BugTracker/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BugTracker/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,74 +5,49 @@
     ViewData["Title"] = "Log in";
 }
 
-
-<div class="container-fluid">
-    <div class="col">
-    <section>
-        <form id="account" method="post">
-            <h1 class="h1">@ViewData["Title"]</h1>
-            <h4>Use a local account to log in.</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label asp-for="Input.RememberMe">
-                        <input asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Log in</button>
-            </div>
-            <div class="form-group">
-                <p>
-                    <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                </p>
-                <p>
-                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                </p>
-            </div>
-        </form>
-    </section>
-    </div>
-
-    <div class="col">
+<h1>@ViewData["Title"]</h1>
+<div class="row">
+    <div class="col-md-4">
         <section>
-            <div>
-                <form id="account" method="post">
-                    <button class="btn btn-secondary" asp-for="Input.Email">Login as Predefined User</button>
+            <form id="account" method="post">
+                <h4>Use a local account to log in.</h4>
+                <hr />
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Input.Email"></label>
+                    <input asp-for="Input.Email" class="form-control" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.Password"></label>
+                    <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </form>
-            </div>
-            <div>
-                <form id="account" method="post">
-                    <button class="btn btn-secondary" asp-for="Input.Email">Login as Predefined Contributor</button>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </form>
-            </div>
-            <div>
-                <form id="account" method="post">
-                    <button class="btn btn-secondary" asp-for="Input.Email">Login as Predefined Admin</button>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </form>
-            </div>
+                </div>
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label asp-for="Input.RememberMe">
+                            <input asp-for="Input.RememberMe" />
+                            @Html.DisplayNameFor(m => m.Input.RememberMe)
+                        </label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Log in</button>
+                </div>
+                <div class="form-group">
+                    <p>
+                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                    </p>
+                    <p>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                    </p>
+                    <p>
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                    </p>
+                </div>
+            </form>
         </section>
     </div>
-
 </div>
 
 @section Scripts {
