--- a/BugTracker/Views/Bugs/Index.cshtml
+++ b/BugTracker/Views/Bugs/Index.cshtml
@@ -1,91 +1,65 @@
 ﻿@model IEnumerable<BugTracker.Models.Bug>
 
 @{
-    ViewData["Title"] = "Bugs";
+    ViewData["Title"] = "Bug Table";
 }
-<div id="Header" class="row flex-row">
-    BUGS
-</div>
-<div id="Table" class="row flex-row align-items-center flex-grow-0">
-    <table class="table table-striped table-hover text-center table-sm border-top border-left border-right border-bottom shadow">
-        <thead class="thead-light border-top border-bottom">
+<div class="row flex-row">
+    <table class="table table-striped table-hover text-center">
+        <thead class="thead-light">
             <tr>
-                <th class="border-left">
-                    @Html.DisplayNameFor(model => model.Status)
-                </th>
-                <th colspan="5">
-                    @Html.DisplayNameFor(model => model.Description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Priority)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Category)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Submitter)
-                </th>
+                <th>@Html.DisplayNameFor(model => model.Status)</th>
+                <th>@Html.DisplayNameFor(model => model.Description)</th>
+                <th class="text-nowrap">Submitted by</th>
+                <th>@Html.DisplayNameFor(model => model.Priority)</th>
+                <th>@Html.DisplayNameFor(model => model.Category)</th>
+                <th>@Html.DisplayNameFor(model => model.Solution)</th>
+                <th class="text-nowrap">Resolved by </th>
                 <th></th>
                 <th></th>
-                <th colspan="5">
-                    @Html.DisplayNameFor(model => model.Solution)
-                </th>
-                <th>Resolved by: </th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th class="border-right"></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
             {
                 <tr>
-                    <td class="text-left align-middle border-left">
-                        @Html.DisplayFor(modelItem => item.Status)
-                    </td>
-                    <td colspan="5" class="text-left align-middle">
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
+                    <td class="text-left align-middle"> @Html.DisplayFor(modelItem => item.Status)      </td>
+                    <td class="text-left align-middle"> @Html.DisplayFor(modelItem => item.Description) </td>
                     <td class="align-middle">
-                        @Html.DisplayFor(modelItem => item.Priority)
-                    </td>
-                    <td class="align-middle">
-                        @Html.DisplayFor(modelItem => item.Category)
-                    </td>
-                    <td class="align-middle">
-                        @Html.DisplayFor(modelItem => item.Submitter)
-                    </td>
-                    <td class="align-middle">
-                        @Html.DisplayFor(modelItem => item.SubmissionDate)
-                    </td>
-                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.Submitter)       <br />
+                        @Html.DisplayFor(modelItem => item.SubmissionDate)  <br />
                         @Html.DisplayFor(modelItem => item.SubmissionTime)
                     </td>
-                    <td colspan="5" class="align-middle text-left">
-                        @Html.DisplayFor(modelItem => item.Solution)
-                    </td>
+
+                    <td class="align-middle">           @Html.DisplayFor(modelItem => item.Priority)</td>
+                    <td class="align-middle">           @Html.DisplayFor(modelItem => item.Category)</td>
+                    <td class="align-middle text-left"> @Html.DisplayFor(modelItem => item.Solution)</td>
+
                     <td class="align-middle">
-                        @Html.DisplayFor(modelItem => item.SolutionUser)
+                        @Html.DisplayFor(modelItem => item.SolutionUser)<br />
+                        @Html.DisplayFor(modelItem => item.SolutionDate)<br />
+                        @Html.DisplayFor(modelItem => item.SolutionTime)
                     </td>
-                    <td class="align-middle">
-                        @Html.DisplayFor(modelItem => item.SubmissionTime)
-                    </td>
-                    <td class="align-middle">
-                        @Html.DisplayFor(modelItem => item.SubmissionTime)
-                    </td>
-                    <td class="align-middle">
-                        <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Close</a>
-                    </td>
-                    <td class="align-middle border-right">
-                        <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a>
-                    </td>
+
+                    <td class="align-middle"><a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-warning btn-block">Close</a></td>
+                    <td class="align-middle border-right"><a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-block">Delete</a></td>
                 </tr>
             }
         </tbody>
+        <tfoot class="thead-light">
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.Status)</th>
+                <th>@Html.DisplayNameFor(model => model.Description)</th>
+                <th class="text-nowrap">Submitted by</th>
+                <th>@Html.DisplayNameFor(model => model.Priority)</th>
+                <th>@Html.DisplayNameFor(model => model.Category)</th>
+                <th>@Html.DisplayNameFor(model => model.Solution)</th>
+                <th class="text-nowrap">Resolved by </th>
+                <th></th>
+                <th></th>
+            </tr>
+        </tfoot>
     </table>
 </div>
-<div id="Footer" class="row flex-row">
-        <a asp-action="Create" class="btn btn-xl btn-success shadow" asp-controller="Bugs">Submit New Bug</a>
+<div class="row flex-row">
+    <a asp-action="Create" class="btn btn-xl btn-success shadow float-right" asp-controller="Bugs">Submit New Bug</a>
 </div>
-
