--- a/BugTracker/Views/Shared/_Layout.cshtml
+++ b/BugTracker/Views/Shared/_Layout.cshtml
@@ -3,59 +3,55 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] Bug Tracker </title>
+    <title>@ViewData["Title"] (Bug Tracker) </title>
 
-    <environment include="Development">
-        <link rel="stylesheet" href="~/css/bootstrap.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
+    <link rel="stylesheet" href="~/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/Site.css" />
+
+    <!--
+    <script src="~/js/jquery.js"></script>
+    <script src="~/js/bootstrap.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/site.min.js" asp-append-version="true"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+            asp-fallback-src="~/js/jquery.min.js"
+            asp-fallback-test="window.jQuery"
+            crossorigin="anonymous"
+            integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
+    </script>
+    <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
+            asp-fallback-src="~/js/bootstrap.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+            crossorigin="anonymous"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+    </script>
+    -->
+
 </head>
+
 <body>
+    <div class="container overflow-auto">
 
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
-        <a asp-controller="Home" asp-action="Index" class="navbar-brand">Bug Tracker</a>
-        <ul class="navbar-nav">
-            <li class="nav-link"><a asp-controller="Home" asp-action="Index" class="navbar-brand">Index</a></li>
-            <li class="nav-link"><a asp-controller="Bugs" asp-action="Index" class="navbar-brand">Bugs</a></li>
-        </ul>
-    </nav>
-
-    <div class="container body-content">
+        <div id="navbar" class="row flex-row navbar navbar-expand navbar-dark bg-dark text-nowrap">
+            <a asp-controller="Home" asp-action="Index" class="navbar-brand float-left text-nowrap flex-shrink-1">Bug Tracker</a>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a asp-controller="Home" asp-action="Index" class="nav-link">Index</a></li>
+                <li class="nav-item"><a asp-controller="Bugs" asp-action="Index" class="nav-link">Bugs</a></li>
+                <partial name="_LoginPartial" />
+            </ul>
+        </div>
+                
+        <div id="title" class="row flex-row justify-content-center flex-grow-1 text-nowrap">           
+            <h1>@ViewBag.Title</h1>
+        </div>
 
         @RenderBody()
-
-        <hr />
-
-        <footer>
+    
+        <div id="footer" class="row flex-row justify-content-center text-nowrap flex-shrink-1">
             <p>&copy; Bug Tracker - 2021 - William Olive Jr.</p>
-        </footer>
+        </div>
+            
     </div>
-
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
 
     @RenderSection("Scripts", required: false)
 </body>
